--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>D&D Maker</title>
   <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="https://sier-vr.github.io/dnd-maker/index.css">
 </head>
 
 <body>
@@ -37,21 +37,21 @@
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-0-0" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-0-0" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-0-0" accept="image/*" onchange="loadFile(this, 0, 0)">
           <input type="text" class="input-content">
         </label>
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-1-0" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-1-0" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-1-0" accept="image/*" onchange="loadFile(this, 1, 0)">
           <input type="text" class="input-content">
         </label>
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-2-0" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-2-0" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-2-0" accept="image/*" onchange="loadFile(this, 2, 0)">
           <input type="text" class="input-content">
         </label>
@@ -64,21 +64,21 @@
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-0-1" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-0-1" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-0-1" accept="image/*" onchange="loadFile(this, 0, 1)">
           <input type="text" class="input-content">
         </label>
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-1-1" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-1-1" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-1-1" accept="image/*" onchange="loadFile(this, 1, 1)">
           <input type="text" class="input-content">
         </label>
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-2-1" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-2-1" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-2-1" accept="image/*" onchange="loadFile(this, 2, 1)">
           <input type="text" class="input-content">
         </label>
@@ -91,21 +91,21 @@
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-0-2" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-0-2" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-0-2" accept="image/*" onchange="loadFile(this, 0, 2)">
           <input type="text" class="input-content">
         </label>
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-1-2" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-1-2" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-1-2" accept="image/*" onchange="loadFile(this, 1, 2)">
           <input type="text" class="input-content">
         </label>
       </div>
       <div class="cell">
         <label class="cell-wrap">
-          <img src="" alt="" id="img-2-2" width="0" height="0" onerror="this.src='/Default.png'" onclick="">
+          <img src="" alt="" id="img-2-2" width="0" height="0" onerror="this.src='/dnd-maker/Default.png'" onclick="">
           <input type="file" class="input-file" name="file-2-2" accept="image/*" onchange="loadFile(this, 2, 2)">
           <input type="text" class="input-content">
         </label>
